[package]
name = "esapi-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base16ct = { version = "0.3.0", features = ["alloc"] }
env_logger = "0.11.8"
log = "0.4.27"
p256 = { version = "0.13.2", default-features = false, features = [
    "arithmetic",
    "std",
    "ecdsa",
] }
p384 = { version = "0.13.1", default-features = false, features = [
    "std",
    "arithmetic",
] }
sha2 = "0.10.9"
tss-esapi = "7.6.0"
